--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -11,12 +11,12 @@
     <string name="no_app_found">Nie znaleziono danych aplikacji</string>
     <string name="set_as">Ustaw jako</string>
     <string name="value_copied_to_clipboard">Wartość została skopiowana do schowka</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">Nieznane</string>
 
     <!-- Filters -->
     <string name="filter">Filtr</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">Nic nie znalazłem.</string>
+    <string name="change_filter">Zmień filtr</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Wymagane jest uprawnienie \'Pamięć\'</string>
@@ -146,7 +146,7 @@
     <string name="dark_theme">Ciemny</string>
     <string name="solarized">Solaryzacja</string>
     <string name="dark_red">Ciemnoczerwony</string>
-    <string name="black_white">Black &amp; White</string>
+    <string name="black_white">Czerń i biel</string>
     <string name="custom">Własny</string>
     <string name="shared">Wspólny</string>
 
@@ -227,7 +227,7 @@
     <string name="settings">Ustawienia</string>
     <string name="customize_colors">Dostosuj kolory</string>
     <string name="use_english_language">Wymuś używanie przez aplikację języka angielskiego</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden_items">Pokazuj ukryte elementy</string>
     <string name="font_size">Rozmiar czcionki</string>
     <string name="small">Mała</string>
     <string name="medium">Średnia</string>
@@ -236,7 +236,7 @@
     <string name="password_protect_hidden_items">Chroń widoczność ukrytych plików</string>
     <string name="password_protect_whole_app">Chroń dostęp do aplikacji</string>
     <string name="keep_last_modified">Zachowuj starą datę i czas modyfikacji przy kopiowaniu / przenoszeniu / zmianie nazwy plików</string>
-    <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
+    <string name="show_info_bubble">Pokazuj dodatkowe informacje o elementach przy przeciąganiu paska przewijania</string>
 
     <!-- About -->
     <string name="about">O aplikacji</string>
