--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -107,7 +107,7 @@
     <string name="properties">Egenskaper</string>
     <string name="path">Bane</string>
     <string name="items_selected">Valgte elementer</string>
-    <string name="direct_children_count">Direct children count</string>
+    <string name="direct_children_count">Antall direkte underliggende elementer</string>
     <string name="files_count">Totale antall filer</string>
     <string name="resolution">Oppløsning</string>
     <string name="duration">Varighet</string>
