--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -253,7 +253,7 @@
     <string name="device_os">Betriebssystem: %1$s</string>
     <string name="donate_please">
         <![CDATA[
-            Hall!,<br><br>
+            Hallo!,<br><br>
             Ich hoffe diese App gefällt dir. Sie beinhaltet keine Werbung, daher unterstütze bitte die Entwicklung durch den Kauf der <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> App. Dadurch wird auch dieser Dialog künftig nicht mehr angezeigt.<br><br>
             Weitere Optionen zum Spenden findest du <a href="http://simplemobiletools.com/donate">hier</a>.<br><br>
             Vielen Dank!
