--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -11,12 +11,12 @@
     <string name="no_app_found">Nenhuma aplicação encontrada</string>
     <string name="set_as">Definir como</string>
     <string name="value_copied_to_clipboard">Valor copiado para a área de transferência</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">Desconhecido</string>
 
     <!-- Filters -->
     <string name="filter">Filtrar</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="no_items_found">Sem itens.</string>
+    <string name="change_filter">Alterar filtro</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Requer acesso ao armazenamento</string>
@@ -145,7 +145,7 @@
     <string name="dark_theme">Escuro</string>
     <string name="solarized">Solar</string>
     <string name="dark_red">Vermelho escuro</string>
-    <string name="black_white">Black &amp; White</string>
+    <string name="black_white">Preto e branco</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Partilhado</string>
 
@@ -223,7 +223,7 @@
     <string name="settings">Definições</string>
     <string name="customize_colors">Personalizar cores</string>
     <string name="use_english_language">Utilizar aplicação em inglês</string>
-    <string name="show_hidden_items">Show hidden items</string>
+    <string name="show_hidden_items">Mostrar itens ocultos</string>
     <string name="font_size">Tamanho do texto</string>
     <string name="small">Pequeno</string>
     <string name="medium">Médio</string>
