add a new action menu with a Remove button only

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Smazat</string>
+    <string name="remove">Remove</string>
     <string name="rename">Přejmenovat</string>
     <string name="share">Sdílet</string>
     <string name="share_via">Sdílet pomocí</string>
