--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Supprimer</string>
+    <string name="remove">Remove</string>
     <string name="rename">Renommer</string>
     <string name="share">Partager</string>
     <string name="share_via">Partager via</string>
