--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -156,6 +156,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Izbriši</string>
+    <string name="remove">Remove</string>
     <string name="rename">Preimenuj</string>
     <string name="share">Dijeli</string>
     <string name="share_via">Dijeli preko</string>
