--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Törlés</string>
+    <string name="remove">Remove</string>
     <string name="rename">Rename</string>
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
