--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Elimina</string>
+    <string name="remove">Remove</string>
     <string name="rename">Rinomina</string>
     <string name="share">Condividi</string>
     <string name="share_via">Condividi via</string>
