--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">削除</string>
+    <string name="remove">Remove</string>
     <string name="rename">名前の変更</string>
     <string name="share">共有</string>
     <string name="share_via">共有&#8230;</string>
