--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Iðtrinti</string>
+    <string name="remove">Remove</string>
     <string name="rename">Pervadinti</string>
     <string name="share">Dalintis</string>
     <string name="share_via">Dalintis per</string>
