--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Slett</string>
+    <string name="remove">Remove</string>
     <string name="rename">Endre navn</string>
     <string name="share">Del</string>
     <string name="share_via">Del via</string>
