--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Verwijderen</string>
+    <string name="remove">Remove</string>
     <string name="rename">Hernoemen</string>
     <string name="share">Delen</string>
     <string name="share_via">Delen via</string>
