--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -156,6 +156,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Usuń</string>
+    <string name="remove">Remove</string>
     <string name="rename">Zmień nazwę</string>
     <string name="share">Udostępnij</string>
     <string name="share_via">Udostępnij w</string>
