--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Apagar</string>
+    <string name="remove">Remove</string>
     <string name="rename">Renomear</string>
     <string name="share">Compartilhar</string>
     <string name="share_via">Compartilhar via</string>
