--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Удалить</string>
+    <string name="remove">Remove</string>
     <string name="rename">Переименовать</string>
     <string name="share">Поделиться</string>
     <string name="share_via">Отправить через</string>
