--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -156,6 +156,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Vymazať</string>
+    <string name="remove">Odstrániť</string>
     <string name="rename">Premenovať</string>
     <string name="share">Zdieľať</string>
     <string name="share_via">Zdieľať cez</string>
