--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Ta bort</string>
+    <string name="remove">Remove</string>
     <string name="rename">Döp om</string>
     <string name="share">Dela</string>
     <string name="share_via">Dela via</string>
