--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Sil</string>
+    <string name="remove">Remove</string>
     <string name="rename">Yeniden adlandır</string>
     <string name="share">Paylaş</string>
     <string name="share_via">Üzerinden paylaş</string>
