--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">삭제</string>
+    <string name="remove">Remove</string>
     <string name="rename">이름변경</string>
     <string name="share">공유</string>
     <string name="share_via">공유방법</string>
