--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">刪除</string>
+    <string name="remove">Remove</string>
     <string name="rename">重新命名</string>
     <string name="share">分享</string>
     <string name="share_via">分享方式</string>
