--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -19,10 +19,10 @@
     <string name="change_filter">Changer le filtre</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">L\'autorisation d\'accès au stockage est requise</string>
+    <string name="no_storage_permissions">L\'authorisation d\'accès au stockage est requise</string>
     <string name="no_contacts_permission">L\'authorisation d\'accès aux contacts est requise</string>
-    <string name="no_camera_permissions">L\'autorisation d\'accès à l\'appareil photo est requise</string>
-    <string name="no_audio_permissions">L\'autorisation d\'accès aux paramètres audios est requise</string>
+    <string name="no_camera_permissions">L\'authorisation d\'accès à l\'appareil photo est requise</string>
+    <string name="no_audio_permissions">L\'authorisation d\'accès aux paramètres audios est requise</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renommer le fichier</string>
