--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -155,7 +155,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Löschen</string>
-    <string name="remove">Remove</string>
+    <string name="remove">Entfernen</string>
     <string name="rename">Umbenennen</string>
     <string name="share">Teilen</string>
     <string name="share_via">Teilen via</string>
